--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Colors Light Theme*/
+:root {
+  --text-banner: #022144;
+  --bg-light: #fafbfc;
+  --text-primary: #32333c;
+  --text-secondary: #f6f8fc;
+  --card-text-paragraph: #8a8fa3;
+  --white: #fff;
+  --yellow: #feb633;
+  /* Colors Dark Theme */
+  --title-work-experience: #cccccc;
+  --card-text: #9f9f9f;
+  --bg-work-section: #393838;
+  --bg-dark: #252525;
 }
