--- a/src/components/WorkExperienceSection/style.css
+++ b/src/components/WorkExperienceSection/style.css
@@ -10,6 +10,7 @@
 }
 
 .header-work-experiences h2 {
+  text-align: center;
   font-size: 2.3rem;
   padding-bottom: 1.2rem;
   margin-bottom: 1.2rem;
