--- a/src/components/BannerSection/style.css
+++ b/src/components/BannerSection/style.css
@@ -24,21 +24,24 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 1.2rem;
+  line-height: 1.4;
   background-color: var(--bg-light);
   color: var(--text-banner);
 }
 
 .banner-content h2 {
-    font-size: 2.9rem;
-    font-weight: 500;
+  width: 60%;
+  font-size: 3.3rem;
+  font-weight: 500;
 }
 .banner-content p {
   text-transform: uppercase;
   font-weight: 500;
-  font-size: .9rem;
+  font-size: 0.8rem;
+  letter-spacing: 2.3px;
 }
 
 .banner-content span {
-    font-weight: 800;
-    font-size: 2rem;
+  font-weight: 900;
+  font-size: 2.4rem;
 }
