--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,28 +1,36 @@
 footer {
-  height: 40vh;
   background-color: var(--white);
   display: flex;
-  gap: 3rem;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 3rem;
   padding: 5rem 0 3rem 0;
 }
 
 footer p {
-    max-width: 600px;
-    text-align: center;
-    font-weight: 400;
-    color: var(--card-text-paragraph);
+  max-width: 600px;
+  text-align: center;
+  font-weight: 400;
+  color: var(--card-text-paragraph);
 }
 footer .footer-logo {
   width: auto;
   height: auto;
 }
+
+footer p:last-child {
+    font-size: .8rem;
+    font-weight: 500;
+}
+footer span {
+  color: var(--yellow);
+  font-weight: 500;
+}
 .social-icons {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 .social-icons img {
   height: 45px;
