--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -7,20 +7,19 @@
   justify-content: center;
   flex: 1;
   flex-basis: calc(33% -10px);
-  margin-bottom: 20px;
   padding: 3rem 1.2rem;
   border: 1px solid #ccc;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
 }
 
 .card p {
   color: var(--card-text-paragraph);
 }
 
+.card p:last-child {
+  margin-top: 0.7rem;
+}
 .card h2 {
   color: var(--text-primary);
-  margin-bottom: 1.2rem;
   font-weight: 800;
   font-size: 1.7rem;
 }
@@ -33,4 +32,34 @@
   background-color: var(--yellow);
   border: 2px solid #edecec;
   box-shadow: none;
+}
+
+/* SCREEN MAX 768PX ============================================== */
+@media (max-width: 768px) {
+  .cards {
+    flex-direction: column;
+    padding: 0;
+  }
+  .card {
+    padding: 0 0.5rem 0 1rem;
+  }
+
+  .card:hover {
+    background-color: transparent;
+    border: 1px solid #ccc;
+  }
+}
+
+/* SCREEN MAX 375PX ============================================== */
+@media (max-width: 375px) {
+  .card {
+    line-height: 1.9;
+  }
+
+  .card p {
+    font-size: 1.1rem;
+  }
+  .card p:last-child {
+    margin-top: 1.3rem;
+  }
 }
