--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -10,6 +10,7 @@ footer {
 
 footer p {
   max-width: 600px;
+  padding: 0 1.5rem;
   text-align: center;
   font-weight: 400;
   color: var(--card-text-paragraph);
@@ -31,6 +32,7 @@ footer span {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  padding: 0 1rem;
 }
 .social-icons img {
   height: 45px;
