--- a/src/components/WorkExperienceSection/style.css
+++ b/src/components/WorkExperienceSection/style.css
@@ -25,23 +25,48 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 10%;
+  width: 15%;
   height: 3px;
   background-color: var(--yellow);
 }
 
 .header-work-experiences p {
-    padding: 1rem;
-    color: var(--card-text-paragraph);
+  padding: 1rem;
+  color: var(--card-text-paragraph);
 }
 
 /* CARDS CONTAINER */
 .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: stretch;
-    padding: 0.5rem 1.5rem 3rem 1.5rem;
-    text-align: start;
-    /* gap: 1.5rem; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 0.5rem 1.5rem 3rem 1.5rem;
+  text-align: start;
+}
+
+/* SCREEN MAX 768PX ============================================== */
+@media (max-width: 768px) {
+  #work-experience-section {
+    padding: 3rem 0.5rem;
+  }
+  .header-work-experiences h2::before {
+    width: 20%;
+    height: 6px;
+  }
+  .cards {
+    flex-direction: column;
+    gap: 0;
+  }
+}
+
+/* SCREEN MAX 436px ============================================== */
+@media (max-width: 436px) {
+  #work-experience-section {
+    padding: 3rem 0 1.8rem 0rem;
+  }
+  .header-work-experiences h2 {
+    font-size: 2.7rem;
+    
+  }
 }
