toggle dark mode header created

--- a/src/components/BannerSection/style.css
+++ b/src/components/BannerSection/style.css
@@ -19,6 +19,10 @@
   background-color: var(--white);
 }
 
+.bg-dark-mode {
+  background-color: var(--bg-dark);
+}
+
 /* text container banner */
 .banner-content {
   width: 50%;
