--- a/src/components/WorkExperienceSection/style.css
+++ b/src/components/WorkExperienceSection/style.css
@@ -5,12 +5,19 @@
   flex-wrap: wrap;
   gap: 2rem;
   width: 100%;
-  background-color: var(--text-secondary);
   text-align: center;
   padding: 3rem 2.5rem;
 }
 
-.header-work-experiences h2 {
+.main-light-mode {
+  background-color: var(--bg-light);
+}
+
+.main-dark-mode {
+  background-color: var(--text-primary);
+}
+
+#header-work-experiences h2 {
   text-align: center;
   font-size: 2.3rem;
   padding-bottom: 1.2rem;
@@ -19,7 +26,7 @@
   position: relative;
 }
 /* yellow line under h2 */
-.header-work-experiences h2::before {
+#header-work-experiences h2::before {
   content: "";
   position: absolute;
   bottom: 0;
@@ -35,6 +42,14 @@
   color: var(--card-text-paragraph);
 }
 
+/* modes dark and light */
+.container-dark-mode h2 {
+  color: #cccccc;
+}
+
+.container-light-mode h2 {
+  color: var(--text-primary);
+}
 /* CARDS CONTAINER */
 .cards {
   display: flex;
@@ -67,6 +82,5 @@
   }
   .header-work-experiences h2 {
     font-size: 2.7rem;
-    
   }
 }
