--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,7 +5,7 @@ footer {
   align-items: center;
   justify-content: center;
   gap: 3rem;
-  padding: 5rem 0 3rem 0;
+  padding: 5rem 0 .5rem 0;
 }
 
 footer p {
@@ -20,20 +20,38 @@ footer .footer-logo {
   height: auto;
 }
 
-footer p:last-child {
-    font-size: .8rem;
-    font-weight: 500;
+.copyright {
+  width: 100%;
+  padding: 1rem 0;
+  font-size: 0.8rem;
+  font-weight: 400;
+  border-top: 1px solid #ccc;
 }
 footer span {
   color: var(--yellow);
   font-weight: 500;
 }
 .social-icons {
+  width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
   padding: 0 1rem;
 }
 .social-icons img {
   height: 45px;
+}
+
+/* DARK MODE AND LIGHT MODE */
+.footer-light-mode {
+  background-color: #ffffff;
+}
+.footer-dark-mode {
+  background-color: var(--bg-dark);
+}
+
+.footer-dark-mode .copyright {
+  border-top: 1px solid #ffffff0d;
 }
