--- a/src/components/WorkExperienceSection/style.css
+++ b/src/components/WorkExperienceSection/style.css
@@ -21,8 +21,7 @@
   text-align: center;
   font-size: 2.3rem;
   padding-bottom: 1.2rem;
-  margin-bottom: 1.2rem;
-  color: var(--text-primary);
+  margin-bottom: 1.2rem;  
   position: relative;
 }
 /* yellow line under h2 */
@@ -46,10 +45,13 @@
 .container-dark-mode h2 {
   color: #cccccc;
 }
-
+.container-dark-mode p {
+  color: #cccccc;
+}
 .container-light-mode h2 {
   color: var(--text-primary);
 }
+
 /* CARDS CONTAINER */
 .cards {
   display: flex;
